# Feed-Forward-Neural-Network

./: CMakeLists.txt  README.md  main.cpp
